tests/lean/set_attr1.lean.expected.out
set_attr1.lean:13:11: warning: declaration 'ex2' uses sorry
set_attr1.lean:13:11: warning: declaration 'ex2.equations._eqn_1' uses sorry
set_attr1.lean:14:3: error: tactic failed, there are unsolved goals
state:
n : ℕ
⊢ f n = n + 1
